namespace Engine
{
    public interface IActor
    {
         void Update();
    }
}