namespace Engine
{
    public interface IRenderable
    {
         void Render();
    }
}